...
            android:layout_gravity="center_horizontal"
            android:background="#00FFFFFF"
            android:onClick="setDate"
            android:textAlignment="center" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="false"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="26dp"
            android:background="@color/colorPrimary"
            android:onClick="addLesson"
            android:text="добавить занятие"
            android:textColor="#FFFFFF" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/lessonRecycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
...
